--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -11,53 +11,16 @@
 </head>
 
 <body>
+
     <div class="container-1" id="container-1">
         <div class="landing-page" id="landing-page">
             <img src="static/images/ui/poster.jpeg" alt="">
-            <button class="btn btn-outline-primary" onclick="letsPlay()">Lets Play</button>
+            <button class="btn btn-outline-primary" onclick="window.location.href='index-2.html'">Lets Play</button>
         </div>
     </div>
 
-    <script src="static/script.js"></script>
+    <script src=" static/script.js"></script>
 
 </body>
 
 </html>
-
-
-<!--Main HTML-->
-<!--    <div class="flex-blackjack-row-1">
-            <img src="static/images/ui/name.png" alt="" width="440" height="210">
-        </div>
-        <div class="flex-blackjack-row-2">
-            <img src="static/images/ui/dealer.jpeg" alt="" width="450" height="238" >
-        </div>
-        <div class="flex-blackjack-row-3">
-            <div id="dealer-box">
-                <h2>Dealer: <span id="dealer-blackjack-result">0</span></h2>
-            </div>
-            <div id="your-box">
-                <h2>You: <span id="your-blackjack-result">0</span></h2>
-            </div>
-        </div>
-        <div class="flex-blackjack-row-4">
-            <div>
-                 <button class="btn-lg btn-primary mr-2" id="blackjack-hit-btn">Hit</button> <button class="btn-lg btn-warning mr-2" id="blackjack-Stand-btn">Stand</button> <button class="btn-lg btn-danger" id="blackjack-deal-btn">Deal</button>
-            </div>
-        </div>
-        <div class="flex-blackjack-row-5" id="flex-cat-gen">
-            <table>
-                <tr>
-                    <th>Wins</th>
-                    <th>Losses</th>
-                    <th>Draws</th>
-                </tr>
-                <tr>
-                    <td><span id="wins">0</span></td>
-                    <td><span id="losses">0</span></td>
-                    <td><span id="draws">0</span></td>
-                </tr>
-            </table>
-        </div>
-        
--->
