--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -17,7 +17,7 @@
         </div>
     </nav>
     <header class="hero">
-        <div>
+        <div class="banner-class">
             <div class="banner">
                 <h2 class="rules">Rules</h2>
                 <ul>
@@ -42,7 +42,11 @@
             </div>
         </div>
         <div class="start-btn">
-            <button class="banner-btn" onclick="window.location.href='index-2.html'">Play</button>
+            <div></div>
+            <div class="play-btn">
+                <button class="banner-btn" onclick="window.location.href='index-2.html'">Play</button>
+            </div>
+            
         </div>
     </header>
 
