--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +10,12 @@
         body {
             text-align: center;
         }
+
         .buttons {
             display: flex;
             justify-content: center;
         }
+
         .button {
             border: 1px solid black;
             display: inline-block;
@@ -25,21 +28,23 @@
             outline: none;
             margin: 20px;
         }
+
         .button:hover {
             background: transparent;
             color: black;
         }
     </style>
 </head>
+
 <body>
     <h1>My JavaScript Projects</h1>
 
     <div class="buttons">
-        <a class="button" href="Javascript-Projects/Age in days/index.html">Age in days</a>
-        <a class="button" href="Javascript-Projects/Rock Paper Scissor/index.html">Rock Paper Scissor</a>
-        <a class="button" href="Javascript-Projects/cat generater/index.html">Cat generater</a>
-        <a class="button" href="Javascript-Projects/blackjack/index.html">BlackJack</a>
+        <a class="button" href="Age-in-days/index.html">Age in days</a>
+        <a class="button" href="Rock-Paper-Scissor/index.html">Rock Paper Scissor</a>
+        <a class="button" href="cat-generater/index.html">Cat generater</a>
+        <a class="button" href="blackjack/index.html">BlackJack</a>
     </div>
-    
 </body>
+
 </html>
