--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS-Projects</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
     <style>
         body {
             text-align: center;
+            font-family: Arial, Helvetica, sans-serif;
         }
 
         .buttons {
@@ -22,6 +27,7 @@
             padding: 10px 20px;
             text-align: center;
             text-decoration: none;
+            font-weight:800;
             color: #ffffff;
             background-color: #2852fcf6;
             border-radius: 6px;
