--- a/Rock-Paper-Scissor/index.html
+++ b/Rock-Paper-Scissor/index.html
@@ -7,6 +7,10 @@
     <title>Rock Paper Scissor</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../favicon_io/site.webmanifest">
 </head>
 <body>
     
